# fl

backend/: package.json  pyproject.toml
backend/backend/: db.sqlite3
backend/backend/accounts/: api.py  models.py
backend/backend/accounts/migrations/: 0001_initial.py
backend/backend/backend/: api.py  settings.py  urls.py
backend/src/: index.ts
frontend/: package.json  pnpm-lock.yaml
frontend/src/features/auth/stores/: authStore.ts
frontend/src/routes/: __root.tsx
